--- a/index.html
+++ b/index.html
@@ -1279,21 +1279,21 @@
     //############################################################
     <div class="the_description">
       <p>
-        Malicounda (Gagnabougou) <br />
+        Mbodiene <br />
 
-        Parcelle a partir de 300m2 <br />
         Informations : <br />
-        6 min de Pointe Sarène <br />
-        5 min de l’autoroute <br />
-        15min de Mbour <br />
-        25min de Saly<br />
-        35min de l’aéroport <br />
-        1h15 de  Dakar<br />
+        • Parcelle à partir de 300m2 <br />
+        • ⁠à 1500m de la mer <br />
+        • ⁠à 5 min de Pointe Sarène <br />
+        • ⁠20 min de Mbour <br />
+        - ⁠30 min de Saly <br />
+        - ⁠45 min de l’aéroport <br />
+        - ⁠1h20 de Dakar<br />
       </p>
 
       <div class="map_container">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d4584.585675241427!2d-16.890739924898163!3d14.372790986086958!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTTCsDIyJzIyLjEiTiAxNsKwNTMnMTcuNCJX!5e1!3m2!1sfr!2ssn!4v1741184746704!5m2!1sfr!2ssn"
+          src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d4586.594649618375!2d-16.881849324900053!3d14.274482886174097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTTCsDE2JzI4LjEiTiAxNsKwNTInNDUuNCJX!5e1!3m2!1sfr!2ssn!4v1742841829373!5m2!1sfr!2ssn"
           width="100%"
           height="100%"
           allowfullscreen=""
