--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <link rel="icon" href="./Style/Images/PNG/favicon.png" />
     <meta
       name="description"
-      content="T5  Dimention:.../... 
-        Localisation:...
-        Region:..."
+      content=" Mbodiene
+
+        Informations :
+        • Parcelle à partir de 300m2 
+        • ⁠à 1500m de la mer
+        • ⁠à 5 min de Pointe Sarène 
+        • ⁠20 min de Mbour 
+        - ⁠30 min de Saly 
+        - ⁠45 min de l’aéroport 
+        - ⁠1h20 de Dakar"
     />
     <meta name="Keywords" content="" />
 
