--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
     <div class="The_Image_Back_Cover"></div>
 
     <div class="the_blach_hover"></div>
+
+    <a onclick="history.back()" class="the-logo">
+      <img src="./Style/Images/PNG/Logo_Akan-Ndaw.png" width="100%" alt="" />
+    </a>
+
     <a-scene
       id="the_scene"
       the_scene
@@ -1318,9 +1323,13 @@
     </div>
 
     <div class="the_info">
-      <img src="./Style/Images/PNG/alert.svg" />
+      <img src="./Style/Images/PNG/information.svg" />
       <img src="./Style/Images/PNG/close.svg" />
     </div>
+
+    <a href="https://askan-ndaw.vercel.app/contact" class="the_mail">
+      <img src="./Style/Images/PNG/mail.svg" />
+    </a>
 
     <div class="the_info-2">
       <img src="./Style/Images/PNG/film.svg" />
