--- a/index.html
+++ b/index.html
@@ -1310,6 +1310,7 @@
           height="100%"
           allowfullscreen=""
           loading="lazy"
+          style="border: 0"
           referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
       </div>
